{
    "name": "CharacterControl",
    "maps": [
        {
            "name": "Character",
            "id": "7f0c5017-0137-4b9e-ad36-752257dc32d3",
            "actions": [
                {
                    "name": "MouseLook",
                    "type": "Value",
                    "id": "468ee088-d41b-4334-bfa3-c3f3e5031d8c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "7cfa1959-ea7f-44f7-b92b-8032b67b5c21",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwipePrimary",
                    "type": "PassThrough",
                    "id": "300f7efb-ab70-428f-829a-37f507cd9b16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "SwipePosition",
                    "type": "PassThrough",
                    "id": "2b05dfad-769d-44ce-99f7-42106673cd85",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6f37da04-e317-4fe7-b63a-11642a20024c",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "InvertVector2(invertX=false),ScaleVector2(x=45,y=45)",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46218a8c-3480-4ff8-990f-36d393da65a2",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwipePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b22708f-0c0f-4bd6-81d8-628dd573b04d",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwipePrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98da788d-bee7-4f09-8041-bfad1b6ba633",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}